cmake_minimum_required(VERSION 3.15)
project(tutorial CXX)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
find_package(ITensor REQUIRED)
set(PROGS ancilla metts metts_solution)
foreach(p ${PROGS})
  add_executable(${p} ${p}.cc)
  target_link_libraries(${p} ITensor::ITensor)
endforeach(p ${PROGS})
